Restored to 'bbf2834c0933b2f2275b63816680a81cad40767e'
Replit-Restored-To: bbf2834c0933b2f2275b63816680a81cad40767e

--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PEOCHAIN - Join the Waitlist | Secure Decentralized Lending Platform</title>
-    <meta name="description" content="Join the PEOCHAIN waitlist for early access to our secure, bank-grade encrypted decentralized lending platform. Be the first to experience financial inclusion reimagined with enterprise-level security." />
-    <!-- Security verification meta tags -->
-    <meta name="verify-v1" content="PEOCHAIN - Security-First Finance Platform">
-    <meta name="norton-safeweb-site-verification" content="security-verification-token" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval';" />
+    <title>PEOCHAIN - Join the Waitlist | Decentralized Lending Platform</title>
+    <meta name="description" content="Join the PEOCHAIN waitlist for early access to our revolutionary decentralized lending platform. Be the first to experience financial inclusion reimagined." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
